create middleware, controller, utils

--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,7 @@
 NODE_ENV=development
 PORT = 5000
+
+MONGO_URI=mongodb+srv://saed_sharqawi:@myloverwan@traversymedia-k9tpi.mongodb.net/devcamper?retryWrites=true&w=majority
+
+GEOCODER_PROVIDER=mapquest
+GEOCODER_API_KEY=E6jDS37IKyWWNsShgZUl8HMy9Ev7CBvV
